name:                servant-side-loaded-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/servant-side-loaded-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.SideLoaded.Server.Internal.SideLoaded
                     , Servant.SideLoaded.Server.Internal
                     , Servant.SideLoaded.Server

  default-extensions: GADTs
                    , FlexibleInstances
                    , KindSignatures
                    , DataKinds
                    , TypeOperators
                    , TypeFamilies
                    , MultiParamTypeClasses
                    , FunctionalDependencies
                    , PolyKinds
                    , ScopedTypeVariables
                    , TypeInType
                    , TypeApplications
                    , UndecidableInstances
                    , OverloadedStrings

  ghc-options: -Wall

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , singletons
                     , servant-server
                     , text
  default-language:    Haskell2010

test-suite servant-side-loading-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , aeson
                     , servant-side-loaded-server
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/servant-side-loaded-server
