name:                servant-zeppelin-client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/servant-side-loaded#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Zeppelin.Client
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , constraints
                     , unordered-containers
                     , singletons
                     , servant
                     , servant-client >= 0.10
                     , servant-zeppelin
                     , text
  default-language:    Haskell2010
  default-extensions:  GADTs
                     , KindSignatures
                     , FlexibleInstances
                     , FlexibleContexts
                     , OverloadedStrings
                     , PolyKinds
                     , RankNTypes
                     , DataKinds
                     , TypeOperators
                     , TypeFamilies
                     , TypeApplications
                     , TypeInType
                     , MultiParamTypeClasses
                     , ScopedTypeVariables
                     , ConstraintKinds
                     
  ghc-options: -Wall

test-suite servant-zeppelin-cient-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , hspec
                     , http-client
                     , mtl
                     , servant
                     , servant-server
                     , servant-client
                     , servant-zeppelin
                     , servant-zeppelin-server
                     , servant-zeppelin-client
                     , string-conversions
                     , warp
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Servant.Zeppelin.ClientSpec

source-repository head
  type:     git
  location: https://github.com/githubuser/servant-side-loaded
