name:                servant-zeppelin-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Zeppelin.Server
  other-modules:       Servant.Zeppelin.Server.Internal.Zeppelin
                     , Servant.Zeppelin.Server.Internal.Types
                     , Servant.Zeppelin.Server.Internal.ContentTypes
                     , Servant.Zeppelin.Server.Internal

  ghc-options: -Wall

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , constraints
                     , case-insensitive
                     , http-types
                     , natural-transformation
                     , singletons
                     , servant >= 0.10
                     , servant-server >= 0.10
                     , servant-zeppelin
                     , string-conversions
                     , text
                     , type-list
                     , wai
  default-language:    Haskell2010

  default-extensions:  GADTs
                     , FlexibleInstances
                     , FlexibleContexts
                     , KindSignatures
                     , DataKinds
                     , TypeOperators
                     , TypeInType
                     , TypeFamilies
                     , MultiParamTypeClasses
                     , FunctionalDependencies
                     , PolyKinds
                     , ScopedTypeVariables
                     , TypeInType
                     , TypeApplications
                     , UndecidableInstances
                     , OverloadedStrings

test-suite servant-zeppelin-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , aeson
                     , mtl
                     , servant
                     , servant-server
                     , servant-zeppelin
                     , servant-zeppelin-server
                     , QuickCheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/
