name:                servant-zeppelin-swagger
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/servant-side-loaded#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Zeppelin.Swagger
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , lens
                     , insert-ordered-containers
                     , unordered-containers
                     , singletons
                     , swagger2
                     , servant
                     , servant-swagger >= 1.1.2.1
                     , servant-zeppelin
                     , text
  default-language:    Haskell2010
  default-extensions:  GADTs
                     , KindSignatures
                     , FlexibleInstances
                     , FlexibleContexts
                     , OverloadedStrings
                     , PolyKinds
                     , DataKinds
                     , TypeOperators
                     , TypeFamilies
                     , TypeApplications
                     , TypeInType
                     , MultiParamTypeClasses
                     , ScopedTypeVariables
                     , ConstraintKinds

source-repository head
  type:     git
  location: https://github.com/githubuser/servant-side-loaded
