name:                servant-zeppelin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/servant-side-loaded#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Zeppelin
                     , Servant.Zeppelin.Types
  build-depends:       base >= 4.7 && < 5
                     , singletons
  default-language:    Haskell2010
  default-extensions:  GADTs
                     , KindSignatures
                     , FlexibleInstances
                     , PolyKinds
                     , DataKinds
                     , TypeOperators
                     , TypeFamilies
                     , TypeInType
                     , MultiParamTypeClasses
                     , ConstraintKinds
                     , FunctionalDependencies
                     , StandaloneDeriving

source-repository head
  type:     git
  location: https://github.com/githubuser/servant-side-loaded
